Add vision-based diagram conversion for Lucidchart/PNG to C4 draw.io
Features:
- Vision AI integration using Claude Opus via copilot-api proxy or direct Anthropic API
- Converts any diagram image (PNG/JPG) to C4 draw.io format
- Automatic extraction of boxes, connections, labels, and spatial layout
- Support for Lucidchart exports, screenshots, hand-drawn diagrams

New files:
- vision_diagram_parser.py: Claude Opus vision API integration
- png2drawio.py: Structured data to draw.io XML converter
- VISION_SETUP.md: Complete setup guide for copilot-api and Anthropic API
- requirements.txt: Python dependencies
- example_vision_conversion.sh/ps1: Example scripts for quick start

Updated:
- main.py: Added --from-image flag and automatic image detection
- README.md: Updated with vision feature documentation
- .gitignore: Exclude intermediate conversion files

--- a/.gitignore
+++ b/.gitignore
@@ -162,5 +162,10 @@ cython_debug/
 # Drawio temp files
 *.dtmp
 *.bkp
+*_intermediate.drawio
+
+# Vision conversion outputs
+output.drawio
+c4_output/
 
 .aider*
